[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon-stage1-support-triage"
version = "0.1.0"
description = "Standalone hackathon repository for the Support Triage OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.7.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "openenv-support-triage-env",
]

[tool.uv]
package = false

[tool.uv.sources]
openenv-support-triage-env = { path = "envs/support_triage_env", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
